[package]
name = "matfquiztador"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
egui = "0.27.2"
eframe = "0.27.2"
egui_extras = { version = "0.27.2", features = ["all_loaders"] }